# robotframework-remoterunner

./: .gitignore  .gitlab-ci.yml  .pylintrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  hello.robot  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: daily_run.yml  publish_to_pypi.yml  split_machine_test.yml  unit_and_integration_tests.yml
rfremoterunner/: agent.py  executor.py  executor_argparser.py  rf_client.py  rf_server.py  robot_file_parser.py  slave.py  utils.py
rfremoterunner/executerun/: __main__.py
rfremoterunner/runslave/: __main__.py
rfslave/: executor.py  executor_argparser.py  rf_client.py  rf_server.py  slave.py  utils.py
src/rfremoterunner/: remote_log.html  remote_output.xml  remote_report.html  rf_client.py  rf_server.py
tests/docker/: docker-compose.yml
tests/integration_tests/: IntegrationSuite.robot  IntegrationTestLibs.py
tests/integration_tests/resources/: T1.robot_  include_exclude_test_cases.robot  suite_4_failing_tests.robot  suite_with_stdlibs.robot
tests/integration_tests/resources/suite_name_filtering/: bbb_ts3.robot
tests/integration_tests/resources/varying_file_extensions/: ts4.txt
tests/integration_tests/test_suites/: IntegrationSuite.robot
tests/unit_tests/: .coveragerc  test_executor_argparser.py  test_rf_client.py  test_rf_server.py  test_robot_file_parser.py  test_utils.py
tests/unit_tests/rf_client_test_resources/: ConstructorTestLibrary.py  NEW.robot  TS1.robot  log.html  output.xml  report.html  three.robot
tests/unit_tests/rf_client_test_resources/primary_dependencies/: Lib1.py  Res1.robot
tests/unit_tests/rf_client_test_resources/primary_dependencies/secondary_dependencies/: Res2.robot
tests/unit_tests/rf_client_test_resources/primary_dependencies/secondary_dependencies/tertiary_dependencies/: Lib2.py  Lib3.py  Res3.resource  Res3.robot
tests/unit_tests/rf_client_test_resources/secondary_test_suites/: S-TS2.robot  S-TS3.txt  S-TS4.robot
tests/unit_tests/rf_client_test_resources/secondary_test_suites/tertiary_test_suites/: T-TS5.robot  T-TS6.txt
