[metadata]
name = robotframework-remoterunner
author = Chris Brookes
author_email = chris-brookes93@outlook.com
description = A library that provides the ability to execute RobotFramework test suites on a remote host.
keywords=robotframework automation testautomation rpa testing acceptancetesting atdd bdd
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/chrisBrookes93/robotframework-remoterunner
project_urls =
    Issue Tracker=https://github.com/chrisBrookes93/robotframework-remoterunner/issues
    Repository=https://github.com/chrisBrookes93/robotframework-remoterunner
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Robot Framework
    Topic :: Software Development :: Testing

[options]
package_dir=
    =src
packages = find:
python_requires = >=2.7

install_requires =
    robotframework >= 3.1.1
    six

[options.packages.find]
where = src

[options.extras_require]
dev =
    unittest2==1.1.0
    mock==3.0.5
    pytest==4.6.11
    pytest-cov==2.10.1
    robotframework-scplibrary
    robotframework-seriallibrary

codecov =
    pylint==2.6.0

[options.entry_points]
console_scripts =
    rfagent = rfremoterunner.agent:run_agent
    rfremoterun = rfremoterunner.executor:run_executor
    rfslave = rfremoterunner.agent:run_agent_deprecated

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths =
    tests/unit_tests

# pytest tries to pick-up a few classes in robotframework because of how they're named
filterwarnings =
    ignore::pytest.PytestCollectionWarning

# Without this, some handle errors occur within robotframework when using pytest through tox
addopts = --capture=sys
